# booking_recommender_system

./: LICENSE  README.md  pyproject.toml  requirements.txt
configs/: setup_poetry.sh  setup_virtual_environments.sh  start_setup.sh
dockerfile/: hotel_recommender_dockerfile
