[build-system]
requires = [
    "setuptools==69.1.1"
]
build-backend = "setuptools.build_meta"
# [build-system]
# requires = ["poetry-core"]
# build-backend = "poetry.core.masonry.api"

[project]
name = "booking_recommender"
authors = [
    { name = "Booking recommender System", email = "rafaelortega_itam@hotmail.com" },
]
version = "0.1.0"
description = "Booking recommender systems"
requires-python = ">=3.10.11,<4.0"
classifiers = [
    # How mature is this project?
    #   2 - Pre-Alpha
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    'Development Status :: 2 - Pre-Alpha',

    # Indicate who your project is intended for
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Build Tools',

    # License
    'License :: OSI Approved :: ABI Analytics',

    # Programming Language
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.10.12',

    # Operating systems
    'Operating System :: MacOS',
    'Operating System :: POSIX :: Linux',
]
readme = "README.md"
# dynamic = ["dependencies"]

[tool.setuptools]
package-dir = { "" = "booking_recommender" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["booking_recommender"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev={file=["requirements-dev.txt"]}}

[tool.distutils.bdist_wheel]
plat-name = "any"
python-tag = "py310"
py-limited-api = "cp38"